--- a/PaymentInterfaceProject/src/main/java/userinterface/PayUtilityBill.form
+++ b/PaymentInterfaceProject/src/main/java/userinterface/PayUtilityBill.form
@@ -87,15 +87,8 @@
               <SubComponents>
                 <Component class="javax.swing.JTable" name="electricityBillTable">
                   <Properties>
-                    <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
-                      <Table columnCount="6" rowCount="0">
-                        <Column editable="true" title="Bill ID" type="java.lang.String"/>
-                        <Column editable="true" title="Billing Date" type="java.lang.String"/>
-                        <Column editable="true" title="Total KWatts" type="java.lang.String"/>
-                        <Column editable="true" title="Amount" type="java.lang.String"/>
-                        <Column editable="true" title="Due Date" type="java.lang.String"/>
-                        <Column editable="true" title="Status" type="java.lang.String"/>
-                      </Table>
+                    <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
+                      <Connection code="new javax.swing.table.DefaultTableModel(&#xa;    new Object [][] {&#xa;&#xa;    },&#xa;    new String [] {&#xa;        &quot;Bill ID&quot;, &quot;Billing Date&quot;, &quot;Total KWatts&quot;, &quot;Amount&quot;, &quot;Due Date&quot;, &quot;Status&quot;&#xa;    }&#xa;) {&#xa;    Class[] types = new Class [] {&#xa;        java.lang.String.class, java.lang.String.class, java.lang.String.class, java.lang.String.class, java.lang.String.class, java.lang.String.class&#xa;    };&#xa;&#xa;    public Class getColumnClass(int columnIndex) {&#xa;        return types [columnIndex];&#xa;    }&#xa;    @Override&#xa;    public boolean isCellEditable(int row, int column) {&#xa;       //all cells false&#xa;       return false;&#xa;    }&#xa;}" type="code"/>
                     </Property>
                     <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor">
                       <TableColumnModel selectionModel="0">
@@ -190,15 +183,8 @@
               <SubComponents>
                 <Component class="javax.swing.JTable" name="waterBillTable">
                   <Properties>
-                    <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
-                      <Table columnCount="6" rowCount="0">
-                        <Column editable="true" title="Bill ID" type="java.lang.String"/>
-                        <Column editable="true" title="Billing Date" type="java.lang.String"/>
-                        <Column editable="true" title="Total Gallons" type="java.lang.String"/>
-                        <Column editable="true" title="Amount" type="java.lang.String"/>
-                        <Column editable="true" title="Due Date" type="java.lang.String"/>
-                        <Column editable="true" title="Status" type="java.lang.String"/>
-                      </Table>
+                    <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
+                      <Connection code="new javax.swing.table.DefaultTableModel(&#xa;    new Object [][] {&#xa;&#xa;    },&#xa;    new String [] {&#xa;        &quot;Bill ID&quot;, &quot;Billing Date&quot;, &quot;Total Gallons&quot;, &quot;Amount&quot;, &quot;Due Date&quot;, &quot;Status&quot;&#xa;    }&#xa;) {&#xa;    Class[] types = new Class [] {&#xa;        java.lang.String.class, java.lang.String.class, java.lang.String.class, java.lang.String.class, java.lang.String.class, java.lang.String.class&#xa;    };&#xa;&#xa;    public Class getColumnClass(int columnIndex) {&#xa;        return types [columnIndex];&#xa;    }&#xa;    @Override&#xa;    public boolean isCellEditable(int row, int column) {&#xa;        //all cells false&#xa;        return false;&#xa;    }&#xa;}" type="code"/>
                     </Property>
                   </Properties>
                 </Component>
@@ -282,15 +268,8 @@
               <SubComponents>
                 <Component class="javax.swing.JTable" name="gasBillTable">
                   <Properties>
-                    <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
-                      <Table columnCount="6" rowCount="0">
-                        <Column editable="true" title="Bill ID" type="java.lang.String"/>
-                        <Column editable="true" title="Billing Date" type="java.lang.String"/>
-                        <Column editable="true" title="Total Gallons" type="java.lang.String"/>
-                        <Column editable="true" title="Amount" type="java.lang.String"/>
-                        <Column editable="true" title="Due Date" type="java.lang.String"/>
-                        <Column editable="true" title="Status" type="java.lang.String"/>
-                      </Table>
+                    <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
+                      <Connection code="new javax.swing.table.DefaultTableModel(&#xa;    new Object [][] {&#xa;&#xa;    },&#xa;    new String [] {&#xa;        &quot;Bill ID&quot;, &quot;Billing Date&quot;, &quot;Total Gallons&quot;, &quot;Amount&quot;, &quot;Due Date&quot;, &quot;Status&quot;&#xa;    }&#xa;) {&#xa;    Class[] types = new Class [] {&#xa;        java.lang.String.class, java.lang.String.class, java.lang.String.class, java.lang.String.class, java.lang.String.class, java.lang.String.class&#xa;    };&#xa;&#xa;    public Class getColumnClass(int columnIndex) {&#xa;        return types [columnIndex];&#xa;    }&#xa;    @Override&#xa;    public boolean isCellEditable(int row, int column) {&#xa;        //all cells false&#xa;        return false;&#xa;    }&#xa;}" type="code"/>
                     </Property>
                   </Properties>
                 </Component>
